objects/Counselor_Availability_Definition__c.object
<CustomObject><fields>
        <fullName>AppointmentType__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Drop In</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Center_Text__c</fullName>
        <description>This field is used to sharing rule and is being populated with Center name via center lookup field</description>
        <label>Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Availability_Definition</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Consultant. Need to link this to Contact to allow them having Write access</description>
        <label>Consultant</label>
        <referenceTo>Consultant__c</referenceTo>
        <relationshipLabel>Availability</relationshipLabel>
        <relationshipName>Availability</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>LWC, Cowell 215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowell 212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC, Malloy 103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McLaren 107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gleeson Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Desk Online/Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC 3rd Floor Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC 4th Floor Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC 5th Floor Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hayes-Healy Formal Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gillson Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fromm Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outtakes Cafe (LoMo by OneCard Office)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossroads Cafe outside Bookstore Entrance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harney 512</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowell 417/418</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kalmanovitz 309 Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Center, 3rd floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleasanton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown SF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Max_No_Of_Slots__c</fullName>
        <label>Maximum No Of Slots/Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Max_Number_of_Students__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Max Number of Students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Meeting_Location__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Repeat__c</fullName>
        <inlineHelpText>Select "Only Once" to create slots for a single day.
Select "Daily" to create slots every day of a specified date range. Do not select specific days.
Select "Weekly" to create slots for selected days of a specified date range. Select the specific days.</inlineHelpText>
        <label>Repeat</label>
        <picklist>
            <picklistValues>
                <fullName>Only Once</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Success_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Center__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Availability (Center)</relationshipLabel>
        <relationshipName>Availability</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TimeSlotDurationLWC__c</fullName>
        <formula>Success_Center__r.AppointmentLength__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Slot Duration (LWC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>TimeSlotDuration__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Time in minutes.  For CASA use only.</description>
        <inlineHelpText>Time in minutes</inlineHelpText>
        <label>Time Slot Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Availability</label><nameField>
        <displayFormat>CAD-{0000}</displayFormat>
        <label>Coach Availability Definition Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Availability</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Read</sharingModel><listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Coach__c</columns>
        <columns>Location__c</columns>
        <columns>Max_Number_of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Success_Center__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>CASA_Availability</fullName>
        <columns>NAME</columns>
        <columns>Coach__c</columns>
        <columns>AppointmentType__c</columns>
        <columns>Meeting_Location__c</columns>
        <columns>Location__c</columns>
        <columns>Max_Number_of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Success_Center__c</field>
            <operation>contains</operation>
            <value>Center for Academic Student Achievement</value>
        </filters>
        <label>CASA Availability</label>
    </listViews><listViews>
        <fullName>LWC_Availability</fullName>
        <columns>NAME</columns>
        <columns>Coach__c</columns>
        <columns>Success_Center__c</columns>
        <columns>AppointmentType__c</columns>
        <columns>Meeting_Location__c</columns>
        <columns>Location__c</columns>
        <columns>Max_Number_of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Consultant__c</columns>
        <columns>End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Success_Center__c</field>
            <operation>contains</operation>
            <value>Learning,Writing,Speaking</value>
        </filters>
        <label>LWC Availability</label>
    </listViews><listViews>
        <fullName>Naya_Availability</fullName>
        <columns>NAME</columns>
        <columns>Coach__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Max_Number_of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coach__c</field>
            <operation>contains</operation>
            <value>Naya</value>
        </filters>
        <label>Naya's Availability</label>
    </listViews><recordTypes>
        <fullName>CASA_Availability</fullName>
        <active>true</active>
        <label>CASA Availability</label>
    </recordTypes><recordTypes>
        <fullName>LWC_Availabilty</fullName>
        <active>true</active>
        <label>LWC Availabilty</label>
    </recordTypes><validationRules>
        <fullName>Cannot_Edit_Appointment_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( AppointmentType__c )</errorConditionFormula>
        <errorMessage>You cannot change Appointment type.</errorMessage>
    </validationRules><validationRules>
        <fullName>Cannot_edit_Center_for_an_Availability</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Success_Center__c )</errorConditionFormula>
        <errorMessage>You cannot update Center for an existing Availability.</errorMessage>
    </validationRules><validationRules>
        <fullName>Capacity_1_for_CASA</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(Success_Center__r.Name, 'CASA') &amp;&amp; Max_Number_of_Students__c &gt; 1,true,false)</errorConditionFormula>
        <errorDisplayField>Max_Number_of_Students__c</errorDisplayField>
        <errorMessage>For CASA maximum number of students should be one</errorMessage>
    </validationRules><validationRules>
        <fullName>Capacity_1_for_Writing_Speaking</fullName>
        <active>true</active>
        <errorConditionFormula>IF((CONTAINS(Success_Center__r.Name, 'Writing') || CONTAINS(Success_Center__r.Name, 'Speaking')) &amp;&amp;  Max_Number_of_Students__c &gt; 1,true,false)</errorConditionFormula>
        <errorDisplayField>Max_Number_of_Students__c</errorDisplayField>
        <errorMessage>Maximum number of students should not be greater than one</errorMessage>
    </validationRules><validationRules>
        <fullName>MaxNoofStudentsshouldbemorethan0</fullName>
        <active>true</active>
        <description>Should save an availability when max no of students is more than 0</description>
        <errorConditionFormula>Max_Number_of_Students__c &lt;= 0</errorConditionFormula>
        <errorMessage>Max No of Students should be at least 1</errorMessage>
    </validationRules><validationRules>
        <fullName>Repeat_Weekly_selection</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( Repeat__c , 'Weekly'))   &amp;&amp; 
 (
  Monday__c  = TRUE  || 
 Tuesday__c = TRUE   || 
  Wednesday__c= TRUE || 
 Thursday__c= TRUE   || 
  Friday__c= TRUE 
)</errorConditionFormula>
        <errorDisplayField>Repeat__c</errorDisplayField>
        <errorMessage>Days of the Week selection valid for Repeat Weekly only.</errorMessage>
    </validationRules><validationRules>
        <fullName>Same_Day_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Repeat__c , 'Only Once'),  
    DAY(DATEVALUE(End_Date_Time__c))  &lt;&gt;  
    DAY(DATEVALUE(Start_Date_Time__c))
   )</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>The End Date must be the same as the Start Date when selecting the 'Only Once' repeat option.</errorMessage>
    </validationRules><validationRules>
        <fullName>Start_End_Time_Min_Gap</fullName>
        <active>true</active>
        <description>Start time and End time must have must not be same</description>
        <errorConditionFormula>Start_Date_Time__c   &gt;=  End_Date_Time__c</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>The End Date Time must be greater than the Start Date Time</errorMessage>
    </validationRules></CustomObject>